--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#FF4B4B"
-backgroundColor="#f4f4f4"
-secondaryBackgroundColor="#f4f4f4"
-textColor="#782F40"
+backgroundColor="#782F40"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#31333F"
 font="sans serif"
