--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,8 @@
 [theme]
 primaryColor="#FF4B4B"
-backgroundColor="#782F40"
+backgroundColor="#CEB888"
 secondaryBackgroundColor="#F0F2F6"
-textColor="#31333F"
+textColor="#782F40"
 font="sans serif"
+
+
